--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -57,6 +57,9 @@
                   <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="{% url 'Suscripcion' %}">Suscripcion</a>
                   </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="{% url 'homeApi' %}">maps</a>
+                  </li>
                   <li class="nav dropdown">
            
                     <a class="nav-link dropdown active" style="color: rgb(95, 95, 95);" href="" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
